# digital-assistant-helvetia-aefligen

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/: .env.example  app.py  indexer.py
src/.gradio/flagged/: dataset1.csv
